# Pomegranate-Game-Engine-Old-

./: .gitignore  CMakeLists.txt  README  README.md
docs/: debug.md  engine.md  input.md  teascript.md  window.md
lib/glad/: glad.c  glad.h
lib/tea/: tea.hpp  tea_conf.h
res/materials/: main.mat
res/models/: Cube.fbx  Cylinder.fbx  Sphere.fbx  Torus.fbx
res/scripts/: 2d_player_controller.tea  basic_movement.tea  debug_sphere.tea  main.tea  player_controller.tea  pomegranate.tea  rotate.tea
res/scripts/basic/: move.tea  rotate.tea  scale.tea
res/scripts/basic/physics/: physics_body.tea
res/shaders/: basic_fragment.glsl  basic_vertex.glsl
src/: color.cpp  color.h  console.cpp  console.h  debug.cpp  debug.h  editor_styles.h  editor_window.cpp  editor_window.h  entities_types.cpp  entities_types.h  entity.cpp  entity.h  hierarchy.cpp  hierarchy.h  import.cpp  import.h  input.cpp  input.h  inspector.cpp  inspector.h  main.cpp  pomegranate_lib.cpp  pomegranate_lib.h  shaders.cpp  shaders.h  tea_tools.cpp  tea_tools.h  viewport.cpp  viewport.h  windows.cpp  windows.h  world.cpp  world.h  world_edit.cpp  world_edit.h
src/shaders/: basic_fragment.glsl  basic_vertex.glsl  debug_fragment.glsl  debug_vertex.glsl
